[#2300]Update the anti-affinity documentation
replace spec.affinity with spec.scheduling.affinity

Closes #2300.

--- a/documentation/asciidoc/topics/proc_configuring_anti_affinity.adoc
+++ b/documentation/asciidoc/topics/proc_configuring_anti_affinity.adoc
@@ -6,6 +6,6 @@ Specify where {k8s} schedules pods for your {brandname} clusters to ensure avail
 
 .Procedure
 
-. Add the `spec.affinity` block to your `Infinispan` CR.
+. Add the `spec.scheduling.affinity` block to your `Infinispan` CR.
 . Configure anti-affinity strategies as necessary.
 . Apply your `Infinispan` CR.
