Fix version misalingment with 2.4.x

--- a/documentation/asciidoc/topics/supported_operands/operand_table.adoc
+++ b/documentation/asciidoc/topics/supported_operands/operand_table.adoc
@@ -30,6 +30,14 @@ include::2_4_11.adoc[]
 a|
 include::2_4_12.adoc[]
 |
+2.4.13
+a|
+include::2_4_13.adoc[]
+|
+2.4.14
+a|
+include::2_4_14.adoc[]
+|
 2.4.2
 a|
 include::2_4_2.adoc[]
