--- a/documentation/asciidoc/topics/supported_operands/operand_table.adoc
+++ b/documentation/asciidoc/topics/supported_operands/operand_table.adoc
@@ -77,4 +77,12 @@ include::2_4_15.adoc[]
 2.4.16
 a|
 include::2_4_16.adoc[]
+|
+2.4.17
+a|
+include::2_4_17.adoc[]
+|
+2.4.18
+a|
+include::2_4_18.adoc[]
 |===
