--- a/documentation/asciidoc/topics/supported_operands/operand_table.adoc
+++ b/documentation/asciidoc/topics/supported_operands/operand_table.adoc
@@ -78,6 +78,14 @@ include::2_4_15.adoc[]
 a|
 include::2_4_16.adoc[]
 |
+2.4.17
+a|
+include::2_4_17.adoc[]
+|
+2.4.18
+a|
+include::2_4_18.adoc[]
+|
 2.5.0
 a|
 include::2_5_0.adoc[]
